--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "cloudinary": "^1.30.0",
+    "form-data": "^4.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "multer": "^1.4.4",
     "next": "12.1.6",
+    "next-connect": "^0.12.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
